--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
             <img src="images/portfolio1.png" alt="portfolio1 photo">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/portfolio.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="hire-button" href="">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
